--- a/ui.apps/resource/frontend/src/.storybook/preview-head.html
+++ b/ui.apps/resource/frontend/src/.storybook/preview-head.html
@@ -2,14 +2,10 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
 <!-- <script src="scripts/thirdparty/jquery-3.4.1.slim.min.js" defer></script> -->
+
+<script src="scripts/thirdparty/flowbite-min.js"></script>
 <script src="scripts/thirdparty/jquery-3.2.1.min.js"></script>
-<script src="scripts/thirdparty/jquerytouch/jquery.touch.js"></script>
-<script src="scripts/thirdparty/jquerytouch/jquery.swipe.js"></script>
-<script src="scripts/thirdparty/popper.min.js" defer></script>
-<script src="scripts/thirdparty/bootstrap.min.js" defer></script>
-<script src="scripts/thirdparty/selectize.js" defer></script>
-<script src="scripts/thirdparty/jquery.slimscroll.js" defer></script>
-<script src="scripts/thirdparty/jquery.flexdatalist.min.js" defer></script>
+
 
 
 
