--- a/ui.apps/resource/frontend/src/.storybook/preview-body.html
+++ b/ui.apps/resource/frontend/src/.storybook/preview-body.html
@@ -4,7 +4,13 @@
 <style>
     #root>div{
            z-index: 10000 !important;
+          
     }
+
+    .sb-show-main.sb-main-padded{
+        padding: 0 !important;
+    }
+    
 </style>
    
 <script>
